Fix spacing

--- a/src/ui/components/DialogTitleWidget/DialogTitleWidget.scss
+++ b/src/ui/components/DialogTitleWidget/DialogTitleWidget.scss
@@ -41,5 +41,9 @@
     &__background-label {
         display: inline-block;
         margin-inline: 19px var(--g-spacing-2);
+
+        &_no-checkbox-compensation {
+            margin-inline-start: 0;
+        }
     }
 }
